--- a/Cassini/Base.lproj/Main.storyboard
+++ b/Cassini/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Tag-I4-WBZ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Fqd-rT-plJ">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -31,13 +31,117 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="yS8-2L-DLS"/>
                     </view>
+                    <navigationItem key="navigationItem" id="gtH-mI-np4"/>
                     <connections>
                         <outlet property="scrollView" destination="nFE-JE-col" id="CEK-7s-hbD"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="d3A-02-ZPR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="492" y="-110.19490254872565"/>
+            <point key="canvasLocation" x="-23" y="817"/>
+        </scene>
+        <!--Split View Controller-->
+        <scene sceneID="gms-u5-1wj">
+            <objects>
+                <splitViewController id="Fqd-rT-plJ" sceneMemberID="viewController">
+                    <connections>
+                        <segue destination="qkO-fL-ZDV" kind="relationship" relationship="masterViewController" id="KQr-IK-4Cv"/>
+                        <segue destination="ufD-45-vY7" kind="relationship" relationship="detailViewController" id="hRa-yx-O0d"/>
+                    </connections>
+                </splitViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="qGN-ks-4L9" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1878" y="-110"/>
+        </scene>
+        <!--Cassini View Controller-->
+        <scene sceneID="h48-cR-lc1">
+            <objects>
+                <viewController id="rvx-hO-BRp" customClass="CassiniViewController" customModule="Cassini" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="aQG-dq-3tW">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="10" translatesAutoresizingMaskIntoConstraints="NO" id="WjP-bD-iSJ">
+                                <rect key="frame" x="125" y="233" width="125" height="200"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="K8W-uC-5vt">
+                                        <rect key="frame" x="0.0" y="0.0" width="125" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <state key="normal" title="Earth"/>
+                                        <connections>
+                                            <segue destination="ufD-45-vY7" kind="showDetail" identifier="Earth" id="5HE-jV-W9C"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BY6-Rq-kX9">
+                                        <rect key="frame" x="0.0" y="70" width="125" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <state key="normal" title="Cassini"/>
+                                        <connections>
+                                            <segue destination="ufD-45-vY7" kind="showDetail" identifier="Cassini" id="e0E-nX-u4I"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oLF-2M-Yzi">
+                                        <rect key="frame" x="0.0" y="140" width="125" height="60"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="40"/>
+                                        <state key="normal" title="Saturn"/>
+                                        <connections>
+                                            <segue destination="ufD-45-vY7" kind="showDetail" identifier="Saturn" id="N7V-03-v0i"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="WjP-bD-iSJ" firstAttribute="centerY" secondItem="aQG-dq-3tW" secondAttribute="centerY" id="dJh-qx-Yd0"/>
+                            <constraint firstItem="WjP-bD-iSJ" firstAttribute="centerX" secondItem="aQG-dq-3tW" secondAttribute="centerX" id="kix-Bd-QyK"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="OSK-nk-OPa"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="e01-jL-GLL"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="DYQ-fG-LTJ" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-23.199999999999999" y="-110.19490254872565"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="yvx-Sz-KSG">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="qkO-fL-ZDV" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="xSN-GD-zPL">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="rvx-hO-BRp" kind="relationship" relationship="rootViewController" id="6B0-Qx-aps"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IAt-2V-2S1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-929" y="-110"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="4uz-mj-vjS">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="ufD-45-vY7" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="VGp-cG-F6D">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="Tag-I4-WBZ" kind="relationship" relationship="rootViewController" id="G60-1n-RV0"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="3KK-qu-kZA" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-931.20000000000005" y="817.69115442278871"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="5HE-jV-W9C"/>
+    </inferredMetricsTieBreakers>
 </document>
